fixed a small issue in semantic that was causing grids to extend past the viewport, creating whitespace on the right side of the body

--- a/assets/linker/styles/semantic.css
+++ b/assets/linker/styles/semantic.css
@@ -672,7 +672,6 @@
   display: block;
   text-align: left;
   font-size: 0em;
-  margin: 0% -1.5%;
   padding: 0%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
